--- a/HairSalon/Views/Stylists/Create.cshtml
+++ b/HairSalon/Views/Stylists/Create.cshtml
@@ -1,23 +1,25 @@
 @model Salon.Models.Stylist;
 
-<h1>Add a new stylist</h1>
+<div class="main">
+  <h1>Add a new stylist</h1>
 
-<p>This is a form submit page to create a new stylist at Eau Claire. In future versions, this text will reflect Eau Claire's branding standards and/or a more personable note to welcome a new stylist. If we feel like it.</p>
+  <p>This is a form submit page to create a new stylist at Eau Claire. In future versions, this text will reflect Eau Claire's branding standards and/or a more personable note to welcome a new stylist. If we feel like it.</p>
 
-@using (Html.BeginForm())
-{
-  @Html.LabelFor(model => model.Name)
-    @Html.TextBoxFor(model => model.Name)
-  @Html.LabelFor(model => model.Phone)
-    @Html.TextBoxFor(model => model.Phone)
-  @Html.LabelFor(model => model.Email)
-    @Html.TextBoxFor(model => model.Email)
-  @Html.LabelFor(model => model.Address)
-    @Html.TextBoxFor(model => model.Address) 
-  @Html.LabelFor(model => model.StartDate)
-    @Html.TextBoxFor(model => model.StartDate)
-  @Html.LabelFor(model => model.LeaseRate)
-    @Html.TextBoxFor(model => model.LeaseRate, new { @type = "number" })
+  @using (Html.BeginForm())
+  {
+    @Html.LabelFor(model => model.Name)
+      @Html.TextBoxFor(model => model.Name)
+    @Html.LabelFor(model => model.Phone)
+      @Html.TextBoxFor(model => model.Phone)
+    @Html.LabelFor(model => model.Email)
+      @Html.TextBoxFor(model => model.Email)
+    @Html.LabelFor(model => model.Address)
+      @Html.TextBoxFor(model => model.Address) 
+    @Html.LabelFor(model => model.StartDate)
+      @Html.TextBoxFor(model => model.StartDate)
+    @Html.LabelFor(model => model.LeaseRate)
+      @Html.TextBoxFor(model => model.LeaseRate, new { @type = "number" })
 
-  <input type="submit" value="Add a stylist" />
-}
+    <input type="submit" value="Add a stylist" />
+  }
+</div>
