--- a/HairSalon/Views/Stylists/Index.cshtml
+++ b/HairSalon/Views/Stylists/Index.cshtml
@@ -1,7 +1,7 @@
 @using Salon.Models;
 @model List<Salon.Models.Stylist>;
 
-<div class="body">
+<div class="main">
   <h1>Our Stylists</h1>
 
   <p>This is a page that features each of our stylists with links to details pages. In future versions, this copy will be customized to reflect Eau Claire's branding standards.</p>
