--- a/HairSalon/Views/Stylists/Details.cshtml
+++ b/HairSalon/Views/Stylists/Details.cshtml
@@ -32,7 +32,7 @@
       <ul>
         @foreach (Client client in Model.Clients)
         {
-          <li>@Html.ActionLink($"{client.Name}", "Details", new { id = client.Id })</li>
+          <li>@Html.ActionLink($"{client.Name}", "Details", "Clients", new { id = client.Id })</li>
         }
       </ul>
     }
