update Program.cs to fix styling problem and add .sln to .gitignore

--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -1,3 +1,7 @@
+@{
+  Layout = "_StylistsLayout";
+}
+
 <h1>Welcome to Eau Claire's Salon</h1>
 
 <p>This is a splash page. In future versions, this page will feature salon branding and splash text for stylists and clients.</p>
