--- a/HairSalon/Public/styles/global.scss
+++ b/HairSalon/Public/styles/global.scss
@@ -9,6 +9,10 @@ header {
 
 body {
   font-family: sans-serif;
+  width: 100%;
+  max-width: 600px;
+  margin: auto;
+  position: relative;
 }
 
 footer {
